# dehyphen

./: .editorconfig  LICENSE  README.md  pyproject.toml
dehyphen/: __init__.py  dehyphen.py  format.py  score_flair.py  scorer.py
tests/: test_dehyphen.py  test_format.py
