[tool.poetry]
name = "dehyphen"
version = "0.0.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = ">=3.6"
flair = "^0.5"
clean-text = "^0.1.1"
unidecode = { version = "^1.1.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.extras]
gpl = ["unidecode"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
