[tool.poetry]
name = "dehyphen"
version = "0.1.1"
description = "Dehyphenation of broken text (mainly German), e.g., extracted from a PDF"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
keywords = ['dehyphenation', 'nlp', 'german', 'hyhpens']
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
flair = "^0.5"
clean-text = { version = "*", extras = [ "gpl" ] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
