[tool.poetry]
name = "dehyphen"
version = "0.2.2"
description = "Dehyphenation of broken text (mainly German), i.e., extracted from a PDF"
license = "GPL-3.0-only"
authors = ["Johannes Filter <hi@jfilter.de>"]
repository = "https://github.com/jfilter/dehyphen"
keywords = ["dehyphenation", "nlp", "german", "hyhpens", "pdf"]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
flair = "^0.5"
clean-text = { version = "*", extras = [ "gpl" ] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
